--- a/index.html
+++ b/index.html
@@ -8,20 +8,34 @@
 </head>
 <body>
     <div class="container">
-        <div class="navbar"></div>
+        <div class="navbar">
+            <div class="logo"></div>
+            <div class="call"><p>Contacter nous !</p></div>
+        </div>
         <div class="step1">
            
             <div class="first_bg">
                 <div class="second_bg"></div>
                 <div class="text">
-                    <h2>Découvrez</h2>
+                    <h2>Découvrez:</h2>
                     <h1>PRAEDIUM-TECH</h1>
-                    <h3>Là où l'innovation rencontre l'excellence dans la gestion <br> immobilière.
+                    <h3>
+                        Là où l'innovation rencontre l'excellence dans la gestion <br> immobilière.
                     </h3>
                     <h5>Praedium Tech offre des solutions logicielles pour aider les entreprises 
                         immobilières <br> à fonctionner de manière plus efficace. Découvrez comment 
                         notre expertise peut <br> vous aider.
                     </h5>
+                    <div class="bigbox">
+                        <div class="box1">
+                            <input type="text" required>
+                            <div class="name">Nom et Prénom</div>
+                        </div>
+                        <div class="box2">E-mail</div>
+                        <div class="box3"></div>
+                        <div class="box4">Message</div>
+                        <div class="lastbox">Soumettre</div>
+                    </div>
                 </div>
 
             </div>
