--- a/index.html
+++ b/index.html
@@ -29,11 +29,21 @@
                     <div class="bigbox">
                         <div class="box1">
                             <input type="text" required>
-                            <div class="name">Nom et Prénom</div>
+                            <div class="name1">Nom et Prénom</div>
                         </div>
-                        <div class="box2">E-mail</div>
-                        <div class="box3"></div>
-                        <div class="box4">Message</div>
+                        <div class="box2">
+                            <input type="text" required>
+                            <div class="name2">E-mail</div>
+                        </div>
+                        <div class="box3">
+                            <input type="text" required>
+                            <div class="name3"></div>
+                        </div>
+                        <div class="box4">
+                            <input type="text" required>
+                            <div class="name4">message</div>
+                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                        </div>
                         <div class="lastbox">Soumettre</div>
                     </div>
                 </div>
