First visual End
i'm done the first visual mean what you see when your looking on our website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo"></div>
-            <div class="call"><p>Contacter nous !</p></div>
+            <a href="#"> Contactez nous !</a>
         </div>
         <div class="step1">
            
@@ -29,21 +29,18 @@
                     </h5>
                     <div class="bigbox">
                         <div class="box1">
-                            <textarea name="text1" id="name1" cols="0" rows="0" placeholder="Nom et prénom"></textarea>
+                            <input type="text" placeholder="Entrez votre nom" id="">
                         </div>
                         <div class="box2">
-                            <textarea name="text2" id="name2" cols="0" rows="0" placeholder="E-mail"></textarea>
+                            <input type="text" placeholder="E-mail" id="t2">
                         </div>
                         <div class="box3">
                             <form>
                                 <select id="country" name="country" onchange="updateCountryCode()">
-                                    <option value="Spain" data-image="https://flagsworld.org/img/cflags/spain-flag.png" data-code="+34">Spain (+34)</option>
-                                    <option value="France" data-image="https://flagsworld.org/img/cflags/France-flag.png" data-code="+33">France (+33)</option>
+                                    <option value="Ivory_Coast" data-image="https://flagsworld.org/img/cflags/cote-d-ivoire-flag.png" data-code="+225">Côte d'Ivoire (+225)</option>
+                                    <option value="Senegal" data-image="https://flagsworld.org/img/cflags/senegal-flag.png" data-code="+221">Senegal (+221)</option>
                                     <option value="Ghana" data-image="https://flagsworld.org/img/cflags/ghana-flag.png" data-code="+233">Ghana (+233)</option>
                                     <option value="Nigeria" data-image="https://flagsworld.org/img/cflags/nigeria-flag.png" data-code="+234">Nigeria (+234)</option>
-                                    <option value="Brazil" data-image="https://flagsworld.org/img/cflags/brazil-flag.png" data-code="+55">Brazil (+55)</option>
-                                    <option value="Ecuador" data-image="https://flagsworld.org/img/cflags/ecuador-flag.png" data-code="+593">Ecuador (+593)</option>
-                                    <option value="Ivory_Coast" data-image="https://flagsworld.org/img/cflags/cote-divoire-flag.png" data-code="+225">Côte d'Ivoire (+225)</option>
                                 </select>
                                 <input type="text" id="phone" name="phone" placeholder="Entrez votre numéro">
                             </form>
@@ -52,7 +49,7 @@
                         <div class="box4">
                             <textarea name="text4" id="name4" cols="0" rows="0" placeholder="Message"></textarea>
                         </div>
-                        <div class="lastbox">Soumettre</div>
+                        <a href="#">Soumettre</a>
                         
                     </div>
                 </div>
