--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Praedium Web Site</title>
     <link rel="stylesheet" href="web.css">
     <script src="web.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
@@ -54,6 +57,13 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+
+        <div class="step2">
+            <div class="sec_bg">
+                <i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i>
+                <p class="choice">Le choix des meilleures entreprises immobilières</p>
             </div>
         </div>
     </div>
